[gd_scene load_steps=2 format=3 uid="uid://drd47dek6gwsg"]

[ext_resource type="Script" path="res://scenes/UI/ability_upgrade_card.gd" id="1_ypdvb"]

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_ypdvb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test Name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Example description for this upgrade, will increase X by 10%"
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
